--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-GEMINI_API_KEY=AIzaSyAH-bf00EKkVbFQqc7RP01_5NCSsWfWtV0
+VITE_GEMINI_API_KEY=AIzaSyAH-bf00EKkVbFQqc7RP01_5NCSsWfWtV0
+VITE_BACKEND_URL=https://cyberpunk-meme-biding.onrender.com
